# autom_for_varnaev

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.clips.yml  docker-compose.demo.release.yml  docker-compose.demo.yml  docker-compose.nvr.yml  docker-compose.release.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
config/: README.md  schedules.example.json
db/: Dockerfile  Dockerfile.backup  Dockerfile.seed  README.md
docs/: 00_BEST_PRACTICES_CODE.md  01_ARCHITECTURE.md  02_NETWORK.md  03_API_CONTRACT.md  04_DATA_MODEL.md  05_SECURITY_CODE_PROTECTION.md  06_BUILD_PLAN.md  07_VIDEO_ANALYTICS.md  08_MQTT_CONTRACT.md  09_OPERATIONS.md  10_DEPLOYMENT.md  11_HARDWARE.md  11_USER_GUIDE.md  12_QUICKSTART_LAPTOP.md  13_PRODUCTION_READINESS.md  14_LICENSING.md  15_SENSOR_QUICKSTART.md  16_READYMADE_SENSORS.md  17_NVR_FRIGATE.md  DEPLOY_CUSTOMER.md  STATUS.md  object_hardware_spec.docx  object_hardware_spec.html
frigate/: config.yml
grafana/: README.md
integration/: README.md  aura_integration.openapi.yaml  aura_integration.postman_collection.json
media-gateway/: README.md  go2rtc.yaml  go2rtc.yaml.example
models/: README.md
mqtt/: mosquitto.conf
scripts/: README.md  backup_db.py  bootstrap.sh  build_customer_doc.py  build_offline_bundle.ps1  build_offline_bundle.sh  check.sh  demo_seed.py  fetch_model.sh  fetch_web_assets.sh  gen_license.py  gen_license_keypair.py  init_env.py  install.sh  nvr_connector.py  publish_release_images.ps1  publish_release_images.sh  seed.py  smoke_test_release.sh  snapshot_db.sh  sync_customer_docs.py
services/api-gateway/: Dockerfile  Dockerfile.release  README.md  pyproject.toml
services/api-gateway/api_gateway/: __init__.py  __main__.py  app.py  app_config_repository.py  artifacts_repository.py  artifacts_store.py  audit.py  auth.py  cameras_repository.py  cleaning_rules_repository.py  clips.py  config.py  db.py  errors.py  events_client.py  integration.py  licensing.py  overview_repository.py  presence_rules_repository.py  query_params.py  readings_repository.py  reports_repository.py  rooms_repository.py  schedules_repository.py  schemas.py  sensor_nodes_repository.py  snapshot.py  stream_proxy.py  tables.py  tasks_repository.py  thresholds_repository.py  zones_repository.py
services/api-gateway/api_gateway/static/: app.js  index.html  live-embed.mjs  live.html  overview.html  wall.html  wall.js
services/api-gateway/tests/: fakes.py  test_analysis_core_vendored.py  test_app_config_repository.py  test_artifacts_endpoint.py  test_contract.py  test_gateway_audit.py  test_gateway_auth.py  test_gateway_cameras.py  test_gateway_config.py  test_gateway_errors.py  test_gateway_events.py  test_gateway_health.py  test_gateway_integration.py  test_gateway_readings.py  test_gateway_roles.py  test_gateway_stream.py  test_gateway_tasks.py  test_gui_index.py  test_licensing.py  test_live_embed_zones.py  test_openapi.py  test_overview.py  test_overview_page.py  test_presence_rules.py  test_reports.py
services/demo-sensors/: Dockerfile  pyproject.toml
services/demo-sensors/demo_sensors/: __init__.py  generator.py  main.py
services/demo-sensors/tests/: test_connect.py  test_generator.py
services/ingest-sensors/: Dockerfile  README.md  pyproject.toml
services/ingest-sensors/ingest_sensors/: __init__.py  config.py  db.py  events.py  main.py  mqtt.py  node_registry.py  parsing.py  pipeline.py  silence.py  silence_tracker.py  thresholds.py
services/ingest-sensors/tests/: test_config.py  test_db.py  test_events.py  test_integration.py  test_mqtt.py  test_node_registry.py  test_parsing.py  test_silence.py  test_silence_tracker.py  test_thresholds.py
services/log-service/: Dockerfile  README.md  pyproject.toml
services/log-service/log_service/: __init__.py  app.py  db.py  envelope.py  escalation.py  notifications.py  repository.py  tables.py
services/log-service/tests/: conftest.py  test_get_event.py  test_health.py  test_list_events.py  test_notifications.py  test_receive.py  test_repository.py  test_validation.py
services/scheduler/: Dockerfile  README.md  pyproject.toml
services/scheduler/scheduler/: __init__.py  camera_liveness.py  camera_store.py  cleaning.py  cleaning_monitor.py  cleaning_store.py  config.py  db.py  dedup.py  events.py  heartbeat.py  main.py  presence_control.py  presence_monitor.py  presence_store.py  repository.py  schedules.py  tables.py  tick.py  watchdog.py
services/scheduler/tests/: test_camera_liveness.py  test_cleaning.py  test_cleaning_monitor.py  test_config.py  test_create_task.py  test_dedup.py  test_main.py  test_presence_control.py  test_presence_monitor.py  test_schedules.py  test_schedules_db.py  test_tick.py  test_watchdog.py
services/video-analytics/: Dockerfile  Dockerfile.release  README.md  pyproject.toml
services/video-analytics/reference/: README.md  motion-log.html
services/video-analytics/tests/: test_actions.py  test_artifacts.py  test_aura_callback.py  test_capture.py  test_coverage.py  test_detector_integration.py  test_event_sink.py  test_file_source.py  test_landmarks.py  test_main_shutdown.py  test_pose_events.py  test_presence.py  test_retention.py  test_sources.py  test_task_repository.py  test_task_status.py  test_uniform.py  test_worker.py  test_worker_artifact.py  test_worker_artifacts.py  test_worker_coverage.py  test_worker_presence.py  test_worker_toggles.py  test_worker_uniform.py
services/video-analytics/video_analytics/: __init__.py  actions.py  artifacts.py  aura_callback.py  capture.py  config.py  coverage.py  db.py  detector.py  event_sink.py  landmarks.py  main.py  pose_events.py  presence.py  repository.py  retention.py  sources.py  tables.py  uniform.py  worker.py
shared/: README.md  pyproject.toml
shared/monitoring_shared/: __init__.py  envelope.py  models.py  shutdown.py
shared/tests/: test_envelope.py  test_import.py  test_models.py  test_models_rest.py  test_shutdown.py
tests/: test_alembic_config.py  test_backup.py  test_ci_smoke_build.py  test_compose.py  (+29 more)
(+76 files in other folders)
