# Корневой конфиг инструментов монорепо (единый для всех сервисов).
# Здесь нет таблицы [project]: это не пакет, а общая конфигурация ruff/mypy/pytest.
# Сами сервисы и shared/ — отдельные пакеты со своими pyproject.toml.

# ───────────────────────────── ruff (линт + формат) ─────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
# Где искать наш код (для сортировки импортов и пр.)
src = ["services", "shared", "scripts"]
# Эталонный PoC видеоаналитики не трогаем линтером — это референс, не наш код.
extend-exclude = ["services/video-analytics/reference"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort (порядок импортов)
  "N",        # pep8-naming
  "UP",       # pyupgrade
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "SIM",      # flake8-simplify
  "RUF",      # правила ruff
]
# Проект русскоязычный (CLAUDE.md §2) — правила «неоднозначного юникода»
# (кириллица, похожая на латиницу) выключаем: иначе они шумят на каждой строке.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

# ───────────────────────────── mypy (проверка типов) ────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "shared:scripts:services/ingest-sensors:services/log-service:services/video-analytics:services/scheduler:services/api-gateway:services/demo-sensors"
# Эталонный PoC и тесты под строгую типизацию не загоняем.
exclude = ['services/video-analytics/reference/', 'db/migrations/']
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true

# Сторонние пакеты без аннотаций типов — не считаем ошибкой отсутствие stubs.
[[tool.mypy.overrides]]
module = [
  "mediapipe.*",
  "cv2.*",
  "paho.*",
  "alembic.*",
  "yaml",
  "uvicorn",
  "uvicorn.*",
  "markdown",
  "weasyprint",
  "weasyprint.*",
]
ignore_missing_imports = true

# ───────────────────────────── pytest (тесты) ───────────────────────────────
[tool.pytest.ini_options]
# Прогон по корневым тестам и тестам всех сервисов.
testpaths = ["tests", "services", "shared"]
pythonpath = ["shared", "scripts", "services/ingest-sensors", "services/log-service", "services/video-analytics", "services/scheduler", "services/api-gateway", "services/demo-sensors"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"
