[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitoring-shared"
version = "0.1.0"
description = "Общие модели и единый конверт API контура мониторинга"
requires-python = ">=3.12"
dependencies = ["pydantic>=2"]

[tool.hatch.build.targets.wheel]
packages = ["monitoring_shared"]
