[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scheduler"
version = "0.1.0"
description = "Планировщик: создание заданий на видеоанализ по расписанию"
requires-python = ">=3.12"
dependencies = [
  "monitoring-shared",
  "pydantic>=2",
  "sqlalchemy>=2",
  "psycopg2-binary>=2.9",
  "httpx>=0.27",
  # База IANA для zoneinfo (#300): не полагаемся на системную tzdata образа/ОС.
  "tzdata>=2024.1",
]

[tool.hatch.build.targets.wheel]
packages = ["scheduler"]
